<resources>
    <string name="app_name">AMEDA Test</string>

    <string name="name">Name:</string>
    <string name="dob">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="education">Education:</string>
    <string name="address">Address:</string>
    <string name="hobbies">Hobbies:</string>
    <string name="notes">Notes:</string>

    <string name="completed_tests">Completed Tests</string>
    <string name="date_test">Date of Test:</string>

    <string name="next">Next</string>
    <string name="save">Done</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="test_1">Position 1</string>
    <string name="test_2">Position 2</string>
    <string name="test_3">Position 3</string>
    <string name="test_4">Position 4</string>
    <string name="test_5">Position 5</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
