<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/test_starting_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Are you ready? Press the button to begin the test."
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/save"
            android:onClick="btn_begin_test"
            android:id="@+id/test_btn_begin_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/test_middle_state"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Step onto the middle of the plate so that the board is horizontal."
            android:id="@+id/test001"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/horizontal"
            android:id="@+id/test002"
            android:layout_below="@+id/test001"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/save"
            android:layout_below="@+id/test002"
            android:layout_centerHorizontal="true"
            android:onClick="btn_Next_Middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/test_setting_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Please wait while the AMEDA moves into the next position."
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/test_stepping_state"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Step on to the plate. Press Next when you know what position the plate is in."
            android:id="@+id/t004"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/step_on"
            android:id="@+id/t005"
            android:layout_below="@+id/t004"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/save"
            android:onClick="btn_Next"
            android:id="@+id/test_btn_next"
            android:layout_below="@+id/t005"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/test_answering_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Step off the platform and select the position you felt while standing on it."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/test_1"
            android:onClick="btn_1"
            android:id="@+id/test_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/test_2"
            android:onClick="btn_2"
            android:id="@+id/test_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/test_3"
            android:onClick="btn_3"
            android:id="@+id/test_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/test_4"
            android:onClick="btn_4"
            android:id="@+id/test_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/test_5"
            android:onClick="btn_5"
            android:id="@+id/test_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/test_finishing_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="The test is finished. Your results have been saved and are available to be viewed."
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/save"
            android:onClick="btn_end_test"
            android:id="@+id/test_btn_end_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>